# work_trello_api

./: .gitignore  22anUFBN (1).json  22anUFBN.json  api_trello_to_excel.py  file_json_to_excel.py  graph.py  pYh1N3Zi (1).json  pyproject.toml  settings_fro_job.py  test.json  test.xlsx  testAPI.xlsx  testOKRB.xlsx
