[tool.poetry]
name = "json-excel"
version = "0.1.0"
description = ""
authors = ["bakashev <bakashevs@mail.ru>"]
readme = "README.md"
packages = [{include = "json_excel"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
